<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">icmInventory</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit_message">To leave the application, click again</string>
    <string name="header_of_exported_file">Id;Kod;KodPomocniczy;NazwaSkrocona;Nazwa;LokalizacjaStara;IloscPoczatkowa;IloscKoncowa;Przetworzona;Spisujacy;</string>
    <string name="header_of_exported_file_for_es_systems_k">Id;Kod;IdDostawcy;IdZamowienia;KodPomocniczy;NazwaSkrocona;Nazwa;Lokalizacja;IloscPoczatkowa;IloscKoncowa;Przetworzona;Spisujacy;</string>
    <string name="header_of_exported_locations_file_es_systems_k">Id;Lokalizacja;</string>
    <string name="fill_value">Complete the value!</string>
    <string name="incorrect_file_format">The selected file is not csv!</string>
    <string name="saved">Saved</string>
    <string name="start_new_inventory">New inventory with data</string>
    <string name="continue_current_inventory">Continue the current inventory</string>
    <string name="login">Login</string>
    <string name="error_init_scanner">Error while init scanner:</string>
    <string name="not_match">Not match</string>
    <string name="error_unregistry_scanner">Error unregistry scanner</string>
    <string name="error_registry_scanner">Error registry scanner</string>
    <string name="cant_release_scanner">Can\'t release scanner</string>
    <string name="item_code">item code</string>
    <string name="Unit">Unit:</string>
    <string name="save">Save</string>
    <string name="sum">Sum</string>
    <string name="scan_code">Scan code</string>
    <string name="scan_ean">Scan code EAN</string>
    <string name="name">Name</string>
    <string name="scanned_amount">Scanned amount:</string>
    <string name="no_tem_for_code">No item for this code. Would you like create new item?</string>
    <string name="amount">Amount:</string>
    <string name="code">Code *</string>
    <string name="code_one_label">Code: </string>
    <string name="code_two_label">Code 2: </string>
    <string name="entry_list">Entry list</string>
    <string name="scanned_list">Scanned item list</string>
    <string name="change_location">Change location</string>
    <string name="end_app">End app</string>
    <string name="Information">Information</string>
    <string name="save_in_csv_file">Save data in CSV file</string>
    <string name="choose_location">Choose location</string>
    <string name="enter_name">Enter name</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="enter_code">Enter code</string>
    <string name="saving_to_csv">Saving csv file...</string>
    <string name="incorrect_file">The file is incompatible with the requirements</string>
    <string name="adding_new_location">Adding new location</string>
    <string name="logout">Log out</string>
    <string name="scanning_items">Scanning items</string>
    <string name="location_already_exists">The location with this name already exists</string>
    <string name="location">Location: \u0020</string>
    <string name="handle">Handle</string>
    <string name="scanner">Scanner</string>
    <string name="support_code">Code 2</string>
    <string name="enter_support_code">Enter support code</string>
    <string name="name_without_asterisk">Name:</string>
    <string name="support_code_without_asterisk">Code 2:</string>
    <string name="company_info">Producer: \n icMobile Systems sp. z o.o.\n  Al. J.Piłsudskiego 46 \n 33-300 Nowy Sącz \n Poland\n \n icmobile@icmobile.pl \n \n All informations about this application:</string>
    <string name="back">Back</string>
    <string name="empty_inventory">New inventory without data</string>
    <string name="generate_empty_file_positions_csv">Generate empty items file CSV</string>
    <string name="generate_empty_file_locations_csv">Generate empty locations file CSV</string>
    <string name="version_demo_not_save_file">You have a DEMO version that does not support write data to a file. We encourage you to purchase the full version of the application on Google Play.</string>
    <string name="go_to_google_play_link">https://play.google.com/store/apps/developer?id=Income+sp.+z+o.o."</string>
    <string name="go_to_google_play">Go to Google Play</string>
    <string name="website"><a href="http://icmInventory.com">http://icmInventory.com</a></string>
    <string name="error_ocurred">Error occured:</string>
    <string name="do_you_want_remove_position">Are you sure you want to delete the item: \u0020</string>
    <string name="start_screen">Start screen</string>
    <string name="scan_localization" translatable="false">Skanowanie lokalizacji</string>
    <string name="assing_to_localization">Znaleziono pozycję nie przypisaną do obecnej lokalizacji. Czy przypisać do obecnej lokalizacji?</string>
    <string name="no_item_with__supplier_id_or_order_id">Brak pozycji o takim Id dostawcy lub Id zamówienia. Utworzyć nową?</string>
    <string name="add_new_location">Zeskanowano nową lokalizację, czy chcesz ją dodać?</string>
    <string name="exist_location">Zeskanowana lokalizacja istnieje, czy ją wybrać?</string>
    <string-array name="report_fragment_tab_names">
        <item name="timeline">oś czasu</item>
    </string-array>
    <string name="scanning">Scanning</string>
    <string name="code_cannot_start_with_hash">Błąd odczytu: kod nie może zaczynać się od znaku \'#\'</string>
    <string name="incorrect_item_code">Nieprawidłowy kod produktu</string>
    <string name="incorrect_location_code">Nieprawidłowy kod lokalizacji</string>
</resources>