<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.icminwertaryzacja.MainActivity">

    <item
        android:id="@+id/info"
        android:title="@string/Information"
        />
    <item
        android:id="@+id/moveToScan"
        android:title="@string/scanning_items"
        android:visible="true"
        />
    <item
        android:id="@+id/exportToCSV"
        android:title="@string/save_in_csv_file"
        android:visible="true"
        />
    <item
        android:id="@+id/generateEmptyCSV"
        android:title="@string/generate_empty_file_csv"
        android:visible="false"
        />
    <item
        android:id="@+id/listEmpty"
        android:title="@string/entry_list"
        android:visible="true"
        />
    <item
        android:id="@+id/listDesc"
        android:title="@string/scanned_list"
        android:visible="true"
        />
    <item
        android:id="@+id/changeLocation"
        android:title="@string/change_location"
        android:visible="true"
        />

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:visible="true"
        />
    <item
        android:id="@+id/exit"
        android:title="@string/end_app"
        android:visible="true"
        />
</menu>